base/brig/ingress.yaml
apiVersion: networking.k8s.io /v1beta1
kind: Ingress
metadata:
  name: brig-authenticated
  nginx.ingress.kubernetes.io/auth-url: "http://zauth"
spec:
  rules:
    - host: api.wire.com
      http:
        paths:
          - { path: /users, serviceName: brig, servicePort: http }
          - { path: /self, serviceName: brig, servicePort: http }
          - { path: /connections, serviceName: brig, servicePort: http }
          - { path: /clients, serviceName: brig, servicePort: http }
          - { path: /invitations, serviceName: brig, servicePort: http }
          - { path: /search, serviceName: brig, servicePort: http }
          - { path: /properties, serviceName: brig, servicePort: http }
---
apiVersion: networking.k8s.io /v1beta1
kind: Ingress
metadata:
  name: brig-unauthenticated
spec:
  rules:
    - host: api.wire.com
      http:
        paths:
          - { path: /login, serviceName: brig, servicePort: http }
          - { path: /register, serviceName: brig, servicePort: http }
          - { path: /access, serviceName: brig, servicePort: http }
